working dapper postgre mediatr ddd

--- a/.editorconfig
+++ b/.editorconfig
@@ -19,7 +19,7 @@ dotnet_diagnostic.CA2007.severity = none # Consider calling ConfigureAwait on th
 dotnet_diagnostic.CA1056.severity = warning # URI properties should not be strings
 dotnet_diagnostic.CA1822.severity = warning # Mark members as static
 dotnet_diagnostic.CA1031.severity = warning # Do not catch general exception types
-dotnet_diagnostic.CA1062.severity = warning # Validate arguments of public methods
+dotnet_diagnostic.CA1062.severity = none # Validate arguments of public methods
 dotnet_diagnostic.CA1307.severity = warning # Specify StringComparison for clarity
 dotnet_diagnostic.CA1304.severity = warning # Specify CultureInfo
 dotnet_diagnostic.CA1305.severity = none # Specify IFormatProvider
