--- a/src/USAFlag.Auth.Core/USAFlag.Auth.Core.csproj
+++ b/src/USAFlag.Auth.Core/USAFlag.Auth.Core.csproj
@@ -4,15 +4,10 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Infrastructure\Repository\Tenant\**" />
-    <EmbeddedResource Remove="Infrastructure\Repository\Tenant\**" />
-    <None Remove="Infrastructure\Repository\Tenant\**" />
-  </ItemGroup>
-
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="EasyNetQ" Version="7.8.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
@@ -20,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.2" />
+    <PackageReference Include="Npgsql" Version="9.0.2" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="SimpleImpersonation" Version="4.2.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.2" />
@@ -32,15 +28,10 @@
 
 
   <ItemGroup>
-    <Folder Include="Application\Commands\Account\" />
-    <Folder Include="Application\Handlers\Commands\Account\" />
-    <Folder Include="Application\Handlers\Queries\Account\" />
-    <Folder Include="Application\Queries\Account\" />
-    <Folder Include="Domain\Entities\" />
     <Folder Include="Domain\Enums\" />
-    <Folder Include="Infrastructure\Repository\" />
-    <Folder Include="Application\Services\" />
-    <Folder Include="Application\Validators\" />
+    <Folder Include="Features\Account\Models\" />
+    <Folder Include="Features\Account\Queries\" />
+    <Folder Include="Shared\Validators\" />
   </ItemGroup>
 
 
